--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,8 @@ services:
       APP_ENV: prod
       APP_SECRET: ${APP_SECRET:-change_me_in_prod}
       DATABASE_URL: ${DATABASE_URL}
-    ports:
-      - "80:80"
+    # ports:
+    #   - "80:80" # Removed to avoid conflict with Coolify Proxy
     volumes:
       - app_data:/var/www/uvdesk/var
       - public_data:/var/www/uvdesk/public/assets
