--- a/.docker/config/apache2/vhost.conf
+++ b/.docker/config/apache2/vhost.conf
@@ -11,6 +11,11 @@
 	ServerAdmin webmaster@localhost
 	DocumentRoot /var/www/uvdesk/public
 
+    <Directory /var/www/uvdesk/public>
+        AllowOverride All
+        Require all granted
+    </Directory>
+
 	# Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
 	# error, crit, alert, emerg.
 	# It is also possible to configure the loglevel for particular
