Fix: Pass COMPOSER_AUTH build argument to Docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     build:
       context: .
       dockerfile: coolify.Dockerfile
+      args:
+        COMPOSER_AUTH: ${COMPOSER_AUTH}
     restart: always
     environment:
       APP_ENV: prod
