--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       APP_ENV: prod
       APP_SECRET: ${APP_SECRET:-change_me_in_prod}
       DATABASE_URL: ${DATABASE_URL}
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     # ports:
     #   - "80:80" # Removed to avoid conflict with Coolify Proxy
     volumes:
