--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,12 +19,14 @@ services:
     volumes:
       - app_data:/var/www/uvdesk/var
       - public_data:/var/www/uvdesk/public/assets
+      - env_file:/var/www/uvdesk/.env
     networks:
       - coolify
 
 volumes:
   app_data:
   public_data:
+  env_file:
 
 
 networks:
